feat(core): 增强 Vue 项目代码生成，支持分块文件写入和工具参数诊断